--- a/index.html
+++ b/index.html
@@ -30,6 +30,65 @@
         <img class="box2" src="assets/hero.png" alt="">
     </div>
    </div>
+   <div class="box4">
+    <div>
+        <h3>
+            Pillars of "Bangladesh 2.0"
+        </h3>
+    </div>
+    <div class="bowes">
+        <div class="Innovation">
+            <p class="pic"><img src="assets/card-icon.png" alt=""></p>
+            <p class="bol">Innovation</p>
+            <p><small>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </small> </p>
+        </div>
+        <div class="Sustainability">
+            <p><img src="assets/card-icon.png" alt=""></p>
+            <p class="bol">Sustainability<p>
+
+            <p>
+                <small>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </small>
+            </p>
+        </div>
+        <div class="Infrastructure">
+            <img src="assets/card-icon.png" alt="">
+            <p class="bol">Infrastructure</p>
+            <p><small>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </small></p>
+        </div>
+        <div class="Empowerment">
+            <img src="assets/card-icon.png" alt="">
+            <p class="bol">Empowerment</P>
+            <p><small>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </small></p>
+        </div>
+        
+    </div>
+
+    <div class="vision">
+        <h3 class="bdv">The Vision of Future</h3>
+        <p class="lorm">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        
+    </div>
+    <div class="card">
+        <div class="div1">
+            <p class="im1"><img src="assets/card-icon.png" alt=""></p>
+            <p class="title-2">Digital Transformation</p>
+            <p class="bdy">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+            <button class="btn1">Learn More</button>
+        </div>
+        <div class="div2">
+            <p class="im1"><img src="assets/card-icon.png" alt=""></p>
+            <p class="title-2">Green Energy</p>
+            <p class="bdy">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+            <button class="btn2">Learn More</button>
+        </div>
+        <div class="div3">
+            <p class="im1"><img src="assets/card-icon.png" alt=""></p>
+            <p class="title-2">Modern Infrastructure</p>
+            <p class="bdy">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+            <button class="btn3">Learn More</button>
+        </div>
+    </div>
+   </div>
 
     </header>
     <main>
