added an index.html file

--- a/index.html
+++ b/index.html
@@ -100,10 +100,79 @@
 
     </div>
    </div>
-
+   <div class="table-1">
+    <h3>Your Opinion Matters</h3>
+        <table class="table">
+            <tr class="head1">
+                <th>Questions</th>
+                <th>Select your Option</th>
+            </tr>
+            <tr class="noth">
+                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                <td><select class="test">
+                    <option value="yes">Yes,I agree</option>
+                </select> </td>
+            </tr>
+            <tr>
+                <td class="titl">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                <td><select>
+                    <option value="yes">Yes,I agree</option>
+                </select> </td>
+            </tr>
+            <tr>
+                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                <td><select>
+                    <option value="yes">Yes,I agree</option>
+                </select> </td>
+            </tr>
+        </table>
+   </div>
+        
+    </div>
     </header>
     <main>
-
+        <div class="New-dev-contain">
+            <h2>Recent News</h2>
+            <p class="fontsi">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development</p>
+            <br>
+            <div class="box-1">
+                <div><img src="assets/satelite.png" alt="" class="box1-left"></div>
+                <div class="box1-right">
+                    <h4>Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p class="time">Date:15-1-2025, Time:  11:30</p>
+                    <p class="fontsi">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn2">Learn More</button>
+                </div>
+            </div>
+            <div class="box-1">
+                <div class="box1-right">
+                    <h5>Bangladesh Launches New Satellite</h5>
+                     <img src="assets/al-jazeera.png" alt="">
+                     <p class="time">Date:15-1-2025, Time:  11:30</p>
+                     <p class="fontsi">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                         with a certain degree of justification, be able to speak of humankind as civilized</p>
+                         <button class="btn2">Learn More</button>
+                </div>
+                    
+                <div>
+                    <h5 class="titf">Bangladesh Launches New Satellite</h5>
+                    <img src="assets/satelite.png" alt="" class="box1-left">
+                </div>
+        </div>
+        <div class="pic-3">
+            <div><img src="assets/satelite.png" alt="" class="box1-left"></div>
+                <div class="box1-right">
+                    <h4>Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p class="time">Date:15-1-2025, Time:  11:30</p>
+                    <p class="fontsi">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn2">Learn More</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
