added an index.file

--- a/index.html
+++ b/index.html
@@ -173,9 +173,30 @@
                 </div>
             </div>
         </div>
+        <div class="Hober">
+            <h5 class="donet">Donate Today</h5>
+            <p class="lori">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+
+            <div class="container">
+                <div class="box">100 Taka</div>
+                <div class="box">200 Taka</div>
+                <div class="box">500 Taka</div>
+                <div class="box">1000 Taka</div>
+                <br>
+                <input type="text" placeholder="Other Amount Taka">
+            </div>
+            <button class="btn2">Done Now</button>
+
+        </div>
+        <div class="subimt">
+            <p class="donet">Subscribe Newsletter</p>
+            <p class="lori">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            <div class="Email"><input type="" placeholder="Enter your email here"><button class="btn2">Subscribe</button></div>
+            <p class="lori">We promise not to spam you!</p>
+        </div>
     </main>
     <footer>
-
+        <p class="foot">Bangladesh 2.0</p>
     </footer>
 </body>
 </html>
